# dari-cli

./: .gitignore  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  go.mod  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/dari/: main.go
dari_cli/: __init__.py  __main__.py  deploy.py  init.py  management.py  manifest.py  source_bundles.py  state.py
examples/: README.md
examples/hello-claude-agent-sdk-js/: README.md  dari.yml  package.json  smoke-test.js
examples/hello-claude-agent-sdk-python/: README.md  agent.py  dari.yml  requirements.txt  smoke_test.py
examples/hello-openai-agents-js/: README.md  dari.yml  package.json  smoke-test.js
examples/hello-openai-agents-python/: Dockerfile  README.md  agent.py  dari.yml  requirements.txt  smoke_test.py
examples/hello-opencode/: README.md  dari.yml
examples/hello-pi/: Dockerfile  README.md  dari.yml  package.json  smoke-test.js
internal/api/: client.go  client_test.go
internal/auth/: auth.go  browser.go  callback.go  callback_test.go  orgs.go  orgs_test.go  pkce.go  pkce_test.go  supabase.go
internal/bundle/: bundle.go  bundle_test.go  code_first_tool_extractor.mjs  code_first_tools.go  metadata.go
internal/cli/: activity.go  activity_test.go  agent.go  apikeys.go  apikeys_test.go  auth.go  credentials.go  current_org_key_test.go  deploy.go  eval.go  init.go  json.go  org.go  resolve.go  resolve_test.go  root.go  root_test.go  router.go  router_eval_test.go  session.go  session_test.go  storage.go  (+4 more)
tests/: test_auth_orgs.py  test_deploy.py  test_init.py  test_manifest.py
(+52 files in other folders)
